[package]
name = "caw_utils"
description = "Utilities for building synthesizers with caw"
version = "0.4.1"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_utils"
edition = "2024"

[features]
web = ["getrandom/wasm_js"]

[dependencies]
caw_core = { version = "0.5", path = "../core" }
caw_builder_proc_macros = { version = "0.1", path = "../builder-proc-macros" }
serde = { version = "1.0", features = ["serde_derive"] }
caw_persistent = { version = "0.1", path = "../persistent" }
rand = "0.9"
getrandom = "0.3"
itertools = "0.14"
