[package]
name = "caw_utils"
description = "Utilities for building synthesizers with caw"
version = "0.5.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_utils"
edition = "2024"

[features]
web = ["getrandom/wasm_js"]

[dependencies]
caw_core = { version = "0.6", path = "../core" }
caw_builder_proc_macros = { version = "0.2", path = "../builder-proc-macros" }
serde = { version = "1.0", features = ["serde_derive"] }
caw_persist = { version = "0.1", path = "../persist" }
rand = "0.9"
getrandom = "0.3"
itertools = "0.14"
