[package]
name = "caw_viz_udp_app_lib"
version = "0.2.0"
edition = "2024"
description = "Library for launching and interacting with instances of caw_viz_udp_app"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/viz_udp_app_lib"

[dependencies]
anyhow = "1.0"
log = "0.4"
lazy_static = "1.5"
caw_core = { version = "0.6", path = "../core" }
caw_modules = { version = "0.5", path = "../modules" }
