[package]
name = "caw_viz_udp_app"
version = "0.3.0"
edition = "2024"
description = "App for visualizing audio data from the caw synthesizer framework"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_viz_udp_app"

[dependencies]
anyhow = "1.0"
sdl2 = { version = "0.38" }
line_2d = "0.5"
clap = { version = "4", features = ["derive"] }
caw_viz_udp_app_lib = { version = "0.2", path = "../viz-udp-app-lib" }
log = "0.4"
caw_window_utils = { version = "0.1", path = "../window-utils" }
caw_persist = { version = "0.1", path = "../persist" }
serde = { version = "1.0", features = ["serde_derive"] }
rgb_int = "0.1"
