[package]
name = "caw_widgets"
version = "0.4.0"
edition = "2024"
description = "Graphical widgets for the caw synthesizer framework"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
homepage = "https://github.com/gridbugs/caw.git"
repository = "https://github.com/gridbugs/caw.git"
documentation = "https://docs.rs/caw_widgets"

[dependencies]
anyhow = "1.0"
sdl2 = { version = "0.38", features = ["ttf"] }
line_2d = "0.5"
lazy_static = "1.5"
midly = "0.5"

[dev-dependencies]
env_logger = "0.11"
caw_midi_udp_client = { path = "../midi-udp-client" }
clap = { version = "4", features = ["derive"] }

[[example]]
name = "knob_demo"
